--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,3 +1,3 @@
-<h1>Mission Planning Dashboard</h1>
-<h3>Mission Name: {{ missionName }}</h3>
-<h3>Carrier Rocket: {{ rocketName }}</h3>
+<h1 class="mainHeader">Mission Planning Dashboard</h1>
+<h3 class="otherHeaders">Mission Name: {{ missionName }}</h3>
+<h3 class="otherHeaders">Carrier Rocket: {{ rocketName }}</h3>
